--- a/Proto.Client.TestNode/Proto.Client.TestNode.csproj
+++ b/Proto.Client.TestNode/Proto.Client.TestNode.csproj
@@ -1,17 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
-     <PackageReference Include="Proto.Actor" Version="0.2.134-cluster-experiments" />
+    <PackageReference Include="Proto.Actor" Version="0.2.134-cluster-experiments" />
     <PackageReference Include="Proto.Remote" Version="0.2.134-cluster-experiments" />
   </ItemGroup>
 
