--- a/Proto.Client.Tests/Proto.Client.Tests.csproj
+++ b/Proto.Client.Tests/Proto.Client.Tests.csproj
@@ -8,12 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
-    <PackageReference Include="Proto.Actor" Version="0.2.135-cluster-experiments" />
-    <PackageReference Include="Proto.Remote" Version="0.2.135-cluster-experiments" />
+    <PackageReference Include="Proto.Actor" Version="0.2.136-cluster-experiments" />
+    <PackageReference Include="Proto.Remote" Version="0.2.136-cluster-experiments" />
   </ItemGroup>
 
   <ItemGroup>
