--- a/Proto.Client.TestNode/Proto.Client.TestNode.csproj
+++ b/Proto.Client.TestNode/Proto.Client.TestNode.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
-    <PackageReference Include="Proto.Actor" Version="0.2.137-cluster-experiments" />
-    <PackageReference Include="Proto.Remote" Version="0.2.137-cluster-experiments" />
+    <PackageReference Include="Proto.Actor" Version="0.11.0" />
+    <PackageReference Include="Proto.Remote" Version="0.11.0" />
   </ItemGroup>
 
   <ItemGroup>
