--- a/Proto.Client.Tests/Proto.Client.Tests.csproj
+++ b/Proto.Client.Tests/Proto.Client.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -13,8 +13,8 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
-    <PackageReference Include="Proto.Actor" Version="0.2.137-cluster-experiments" />
-    <PackageReference Include="Proto.Remote" Version="0.2.137-cluster-experiments" />
+    <PackageReference Include="Proto.Actor" Version="0.11.0" />
+    <PackageReference Include="Proto.Remote" Version="0.11.0" />
   </ItemGroup>
 
   <ItemGroup>
