--- a/Proto.Client.TestNode/Proto.Client.TestNode.csproj
+++ b/Proto.Client.TestNode/Proto.Client.TestNode.csproj
@@ -1,21 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
-    <PackageReference Include="Proto.Actor" Version="0.11.0" />
-    <PackageReference Include="Proto.Remote" Version="0.11.0" />
+    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Proto.Client.TestMessages\Proto.Client.TestMessages.csproj" />
-    <ProjectReference Include="..\Proto.Client\Proto.Client.csproj" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.32.0" />
   </ItemGroup>
 
 </Project>
