--- a/Proto.Client.TestNode/Proto.Client.TestNode.csproj
+++ b/Proto.Client.TestNode/Proto.Client.TestNode.csproj
@@ -9,7 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.32.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+    <PackageReference Include="Proto.Actor" Version="0.12.0" />
+    <PackageReference Include="Proto.Remote.GrpcNet" Version="0.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Proto.Client\Proto.Client.csproj" />
   </ItemGroup>
 
 </Project>
